# cubeplex

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  THIRD_PARTY_NOTICES.md  codecov.yml  skills-lock.json
backend/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  alembic.ini  babel.cfg  config.development.yaml  config.production.yaml  config.test.yaml  config.yaml  coverage.xml  main.py  pyproject.toml  requirements-frozen.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 00948a73877f_mcp_install_slug_name_generated_column_.py  00fe892184fa_add_im_channel_bindings_table.py  03cadabcebbc_merge_sandbox_env_egress_heads_with_main.py  0475a231f07f_unique_artifact_version_per_artifact.py  060310ecfd8a_cubepi_v2_to_v3_pending_run_id.py  076f490b6099_mcp_template_centric_semantics.py  09a4503eba8a_add_credential_mode_to_workspace_mcp_.py  0c41b322ea93_add_destination_columns_to_triggers.py  0c4b0b86709a_sandbox_env_drop_plain_value.py  13ca78afb7f0_add_conversation_shares_table.py  1890ff8246f4_add_consolidation_to_memorysourcetype_.py  1984c75dab8d_add_mcp_connector_tables.py  1991a15c011d_make_workspace_mcp_override_credential_.py  1a8d521ac153_add_creator_user_id_to_conversations.py  1caf6ee11f3c_m3_skills_marketplace.py  1d1dab71f0fa_widen_identity_id_columns_to_36_chars_.py  1f65e338699a_sandbox_reconciler_last_provider_check.py  2031a448c1f6_im_bot_settings_attributes_cols_thread_.py  27df13e3949d_drop_legacy_model_presets_rows.py  28c4c57516f6_sandbox_policy_null_safe_partial_unique_.py  2b4e5bebbc7f_conversations_soft_delete_add_deleted_at.py  2b6db4bfe7ac_user_sandbox_topic_id_partial_unique_.py  2f3d624337bd_sandbox_policy_network_default_action.py  31dccfa1df5e_add_mcp_connector_installs_discovery_.py  33ac667bd514_add_archived_at_to_workspaces.py  375b2771c56e_add_user_events_table.py  3c453a5e6ad5_add_skill_deprecated_at.py  3e8d2018cdb9_migrate_orgsettings_to_model_presets.py  3fcdfc800664_add_mcp_four_layer_tables.py  4137c1986c3e_cubepi_v3_to_v4_runs.py  47105505d677_mcp_install_uniqueness_across_scopes_r1_.py  49844ea5ac7b_mcp_template_install_static_auth_style_.py  49ec26f0f17c_conversation_has_messages.py  4b2f76fe406d_add_egress_proxy_to_sandbox_policies.py  4be6ed892e02_add_conversation_is_pinned.py  4ee06307776d_conversation_delete_cascade_cascade_.py  538af47f81eb_add_provider_slug.py  555c11215b57_add_cubepi_checkpointer_tables.py  59fd2d03ce79_add_sso_last_idp_attributes.py  5f7a2c1d9b40_upgrade_provider_reasoning_capability.py  (+81 more)
backend/cubebox/: app.py  config.py
backend/cubebox/agents/: __init__.py  checkpointer.py  checkpointer_pi.py  convert.py  convert_pi.py  executor.py  graph.py  graph_pi.py  hydrator.py  schemas.py  state.py  stream.py  stream_pi.py  tracing.py
backend/cubebox/api/: app.py  exceptions.py  serializers.py
backend/cubebox/audit/: __init__.py
backend/cubebox/auth/: __init__.py  context.py  db.py  dependencies.py  email_otp.py  jwt.py  password_policy.py  singleton_org.py  users.py
backend/cubebox/cache/: __init__.py
backend/cubebox/cli/: __init__.py  __main__.py  admin.py  seed_mcp_catalog.py  seed_mcp_templates.py
backend/cubebox/credentials/: __init__.py  dependencies.py  exceptions.py  keys.py
backend/cubebox/db/: __init__.py  engine.py  session.py
backend/cubebox/errors/: __init__.py
backend/cubebox/im/: artifact_delivery.py  artifacts.py  bot_settings.py  conversation_resolver.py  identity.py  inbound.py  inbound_attachments.py  link.py  op_dispatcher.py  outbound.py  reset_command.py  resume.py  run_handoff.py  runtime.py  types.py  worker.py
backend/cubebox/lifecycle/: __init__.py
backend/cubebox/llm/: __init__.py  builder.py  cache_markers.py  cache_markers_pi.py  capabilities.py  config.py  errors.py  factory.py  images.py  oneshot.py  openai_compatible.py  readiness.py  resolver.py  runtime_writeback.py  snapshot.py  snapshot_schema.py
backend/cubebox/mcp/: _constants.py  catalog_seed.py  client.py  connection_params.py  cubepi_admin_discovery.py  cubepi_admin_refresh.py  cubepi_discovery.py  cubepi_runtime.py  dependencies.py  disclosure.py  discovery.py  discovery_pi.py  effective.py  exceptions.py  icons.py  runtime.py  runtime_pi.py  template_seed.py  user_token.py  workspace_bootstrap.py
backend/cubebox/middleware/: _compose.py  _utils.py  artifacts.py  artifacts_pi.py  attachments.py  attachments_pi.py  cancellation.py  citation.py  citation_pi.py  compaction_pi.py  cost.py  cost_pi.py  memory.py  memory_pi.py  reflection.py  sandbox.py  sandbox_pi.py  skills.py  skills_pi.py  subagents.py  subagents_pi.py  timestamps.py  timestamps_pi.py  todo.py  todo_pi.py  user_identity.py
backend/cubebox/models/: __init__.py  agent_config.py  api_key.py  artifact.py  artifact_version.py  attachment.py  billing.py  conversation.py  conversation_chunk.py  conversation_participant.py  conversation_share.py  credential.py  egress_ref.py  embedding_job.py  external_identity.py  im_channel_binding.py  im_connector.py  invite_token.py  mcp.py  membership.py  memory.py  message.py  mixins.py  org_invite_token.py  org_provider_override.py  org_settings.py  organization.py  organization_membership.py  provider.py  public_id.py  (+15 more)
backend/cubeplex/: __init__.py  config.py  reasoning.py
backend/docs/: auth.md  deploy-k8s-graceful-restart.md  im-feishu-setup.md  mcp_catalog_oauth.md  mcp_oauth_staging_test_plan.md  prompt-cache-discipline.md  quick-reference.md  virtual-filesystem-design.md
backend/scripts/: check.sh  cleanup_sandboxes.py  format.sh
backend/tests/: conftest.py  test_attachment_hint_middleware.py  test_billing_repository.py  test_convert_attachments.py  test_cost_middleware.py  test_hydrator.py  test_image_resize.py  test_logger.py  test_loguru_shutdown.py  test_memory_consolidation_gate.py  test_provider_capability_factory.py  test_provider_runtime_writeback.py  test_safe_basename.py  test_worktree_env.py
benchmarks/swebench/: .gitignore  README.md  pyproject.toml
(+2323 files in other folders)
