[project]
name = "cubebox-swebench-harness"
version = "0.1.0"
description = "Drive cubebox over its HTTP API to produce SWE-bench Verified predictions."
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.20.0",
    "requests>=2.31.0",
]

[project.scripts]
swebench-run = "swebench_harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swebench_harness"]
